@@ -2,6 +2,7 @@ package console
 
 import (
 	"encoding/json"
+	"fmt"
 	"os"
 
 	"github.com/elastic/beats/libbeat/common"
@@ -20,28 +21,23 @@ func (p plugin) NewOutput(
 	topologyExpire int,
 ) (outputs.Outputer, error) {
 	pretty := config.Pretty != nil && *config.Pretty
-	return newConsole(pretty), nil
+	c := newConsole(pretty)
+
+	// check stdout actually being available
+	if _, err := c.out.Stat(); err != nil {
+		return nil, fmt.Errorf("console output initialization failed with: %v", err)
+	}
+
+	return c, nil
 }
 
 type console struct {
 	pretty bool
+	out    *os.File
 }
 
 func newConsole(pretty bool) *console {
-	return &console{pretty}
-}
-
-func writeBuffer(buf []byte) error {
-	written := 0
-	for written < len(buf) {
-		n, err := os.Stdout.Write(buf[written:])
-		if err != nil {
-			return err
-		}
-
-		written += n
-	}
-	return nil
+	return &console{pretty: pretty, out: os.Stdout}
 }
 
 func (c *console) PublishEvent(
@@ -63,10 +59,10 @@ func (c *console) PublishEvent(
 		return err
 	}
 
-	if err = writeBuffer(jsonEvent); err != nil {
+	if err = c.writeBuffer(jsonEvent); err != nil {
 		goto fail
 	}
-	if err = writeBuffer([]byte{'\n'}); err != nil {
+	if err = c.writeBuffer([]byte{'\n'}); err != nil {
 		goto fail
 	}
 
@@ -78,4 +74,17 @@ fail:
 	}
 	outputs.SignalFailed(s, err)
 	return err
+}
+
+func (c *console) writeBuffer(buf []byte) error {
+	written := 0
+	for written < len(buf) {
+		n, err := c.out.Write(buf[written:])
+		if err != nil {
+			return err
+		}
+
+		written += n
+	}
+	return nil
 }
